tests/error/errors_on_usage/while_type_change.py
from guppylang.decorator import guppy


@guppy
def foo(x: bool) -> int:
    y = 5
    while x:
        y = True
    return y
